# F5-TTS

./: .gitmodules  Dockerfile  pyproject.toml
src/f5_tts/: serve.py
src/f5_tts/infer/: utils_infer.py
src/f5_tts/model/: utils.py
src/f5_tts/tools/: enhance.py
